# Kaleido

./: .gitignore  DEPLOYMENT.md  PROMPT_LOG.md  README.md  alembic.ini  docker-compose.stub.yml  docker-compose.yml  pyproject.toml
data/processed/: facets_clean.csv  facets_enriched.csv
docker/: Dockerfile
scripts/: build_embeddings.py  generate_eval_set.py  seed_registry.py
src/kaleido/: api.py  confidence.py  config.py  embedding.py  errors.py  gating.py  pipeline.py  registry.py  schemas.py  scoring.py  synthesis.py
src/kaleido/db/: base.py  models.py
src/kaleido/db/migrations/: env.py
src/kaleido/db/migrations/versions/: 0001_initial.py
tests/: conftest.py  test_api.py  test_confidence.py  test_db_models.py  test_gating.py  test_packaging.py  test_pipeline.py  test_registry.py  test_schemas.py  test_scoring.py  test_synthesis.py
ui/: streamlit_app.py
