[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaleido"
version = "0.1.0"
description = "Facet-as-data conversation evaluation engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.0",
    "streamlit>=1.36.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
gpu = [
    "vllm>=0.5.0",
    "torch>=2.3.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "types-pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kaleido"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "pgvector.*",
    "sklearn.*",
    "scipy.*",
    "structlog.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
